backpack/src/snapshots/custom_config@[notfound]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "notfound:hygen",
    Err(
        "no vendor found for: notfound",
    ),
)
