backpack/src/snapshots/custom_config@[notfound]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "notfound:jondot/hygen",
    Err(
        "no vendor found for: notfound",
    ),
)
