backpack/src/snapshots/custom_config@[notfound]-[rust-starter]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "notfound:rust-starter",
    Err(
        "no vendor found for: notfound",
    ),
)
