backpack/src/snapshots/locations@[]-[group_team_repo]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "group/team/repo",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/group/team/repo",
                domain: "github.com",
                path: "/group/team/repo",
                project: "repo",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
