backpack/src/snapshots/locations@[]-[hygen]-[#wip].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "hygen#wip",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/hygen#wip",
                domain: "github.com",
                path: "/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: Some(
                    "wip",
                ),
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
