backpack/src/snapshots/locations@[]-[hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "hygen",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/hygen",
                domain: "github.com",
                path: "/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
