backpack/src/snapshots/locations@[]-[jondot_hygen]-[#wip].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "jondot/hygen#wip",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/jondot/hygen#wip",
                domain: "github.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: Some(
                    "wip",
                ),
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
