backpack/src/snapshots/locations@[]-[jondot_hygen_-_subfolder]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "jondot/hygen/-/subfolder",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/jondot/hygen/-/subfolder",
                domain: "github.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: Some(
                    "subfolder",
                ),
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
